--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 	<!-- Placed at the end of the document so the pages load faster -->
 	<script src="assets/js/jquery.js"></script>
 	<script src="assets/js/bootstrap.min.js"></script>
-	<script src="assets/js/clippy.min.js"></script>
+	<script src="assets/js/clippy.min.js?"></script>
 	<script>
 	var agent;
 	var counter=0;
