--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
 				window.agent.show();
 				window.agent.speak("Are you sure you want to leave?");
 				window.agent.animate();
+				counter++;
 			}
 		});
 	});
