--- a/index.html
+++ b/index.html
@@ -178,12 +178,9 @@
 			var avr_y = $('.avram').offset().top;
 			window.agent.moveTo(100, 200);
 			window.agent.show();
-			window.agent.speak("Hello there!");
-			window.agent.speak("Do you know Nemanja?");
+			window.agent.speak("Hello there! Do you know Nemanja?");
 			window.agent.gestureAt(avr_x+50, avr_y+50);
 			window.agent.speak("This guy! He writes awesome code!");
-			window.agent.speak("You should definitely hire him!");
-			window.agent.speak("No, really! You should!");
 			window.agent.animate();
 		});
 
