clippy position fixfix

--- a/index.html
+++ b/index.html
@@ -174,11 +174,10 @@
 
 
 		cheet('↑ ↑ ↓ ↓ ← → ← → b a', function () {
-			var avr_offset = $('.avram').offset();
-			var avr_x = .left;
+			var avr_x = $('.avram').offset().left;
 			var avr_y = $('.avram').offset().top;
 			window.agent.show();
-			window.agent.moveTo(avr_offset.left-150, avr_offset+50);
+			window.agent.moveTo(avr_x-150, avr_y+50);
 			window.agent.speak("Hello there! Do you know Nemanja?");
 			window.agent.play('GestureLeft');
 			window.agent.speak("This guy! He writes awesome code!");
