--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 						  <div class="row">
 							  <div class="col-xs-6">
 								  <p class="sm">
-									<i class="icon-globe"></i> - <a href="http://avramovic.info">avramovic.info</a> <br/>
-									<i class="icon-envelope"></i> - nemanja AT avramovic DOT info
+									<i class="icon-globe"></i> - <a href="http://avramovic.info" target="_blank">avramovic.info</a> <br/>
+									<i class="icon-envelope"></i> - avramyu AT gmail
 								  </p>
 							  </div><!-- col-xs-6 -->
 
@@ -130,15 +130,15 @@
 						  <div class="row">
 							  <div class="col-xs-6">
 								  <p class="sm">
-									<i class="icon-facebook"></i> - nemanja.avramovic <br/>
-									<i class="icon-linkedin"></i> - avramovic
+									<i class="icon-facebook"></i> - <a href="https://on.fb.me/nemanja.avramovic" target="_blank">nemanja.avramovic</a> <br/>
+									<i class="icon-linkedin"></i> - <a href="https://www.linkedin.com/in/avramovic" target="_blank">avramovic</a>
 								  </p>
 							  </div><!-- col-xs-6 -->
 
 							  <div class="col-xs-6">
 								  <p class="sm">
-									<i class="icon-github"></i> - avramovic <br/>
-									<i class="icon-twitter"></i> - @avramator
+									<i class="icon-github"></i> - <a href="https://github.com/avramovic" target="_blank">avramovic</a> <br/>
+									<i class="icon-twitter"></i> - @<a href="https://twitter.com/avramator" target="_blank">avramator</a>
 								  </p>
 							  </div><!-- col-xs-6 -->
 						  </div><!-- row -->
