--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 						  <div class="row">
 							  <div class="col-xs-6">
 								  <p class="sm">
-									<i class="icon-facebook"></i> - <a href="https://on.fb.me/nemanja.avramovic" target="_blank">nemanja.avramovic</a> <br/>
+									<i class="icon-facebook"></i> - <a href="https://fb.me/nemanja.avramovic" target="_blank">nemanja.avramovic</a> <br/>
 									<i class="icon-linkedin"></i> - <a href="https://www.linkedin.com/in/avramovic" target="_blank">avramovic</a>
 								  </p>
 							  </div><!-- col-xs-6 -->
@@ -138,7 +138,7 @@
 							  <div class="col-xs-6">
 								  <p class="sm">
 									<i class="icon-github"></i> - <a href="https://github.com/avramovic" target="_blank">avramovic</a> <br/>
-									<i class="icon-twitter"></i> - @<a href="https://twitter.com/avramator" target="_blank">avramator</a>
+									<i class="icon-twitter"></i> - <a href="https://twitter.com/avramator" target="_blank">avramator</a>
 								  </p>
 							  </div><!-- col-xs-6 -->
 						  </div><!-- row -->
