--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
 						  <div class="row">
 							  <div class="col-xs-6 centered">
 								<img class="img-responsive" src="assets/img/p01.png" alt="">
-								<a href="#"><h6><i class="icon-link"></i> Project Name</h6></a>
+								<a href="#"><h6><i class="icon-link"></i> todo...</h6></a>
 							  </div><!-- col-xs-6 -->
 							  <div class="col-xs-6 centered">
 								<img class="img-responsive" src="assets/img/p02.png" alt="">
-								<a href="#"><h6><i class="icon-link"></i> Project Name</h6></a>
+								<a href="#"><h6><i class="icon-link"></i> todo...</h6></a>
 							  </div><!-- col-xs-6 -->
 						  </div><!-- row -->
 
@@ -96,11 +96,11 @@
 							<br>
 							  <div class="col-xs-6 centered">
 								<img class="img-responsive" src="assets/img/p03.png" alt="">
-								<a href="#"><h6><i class="icon-link"></i> Project Name</h6></a>
+								<a href="#"><h6><i class="icon-link"></i> todo...</h6></a>
 							  </div><!-- col-xs-6 -->
 							  <div class="col-xs-6 centered">
 								<img class="img-responsive" src="assets/img/p04.png" alt="">
-								<a href="#"><h6><i class="icon-link"></i> Project Name</h6></a>
+								<a href="#"><h6><i class="icon-link"></i> todo...</h6></a>
 							  </div><!-- col-xs-6 -->
 						  </div><!-- row -->
 					  </div><!-- /Tab Portfolio -->
@@ -113,14 +113,13 @@
 							  <div class="col-xs-6">
 								  <p class="sm">
 									<i class="icon-globe"></i> - <a href="http://avramovic.info" target="_blank">avramovic.info</a> <br/>
-									<i class="icon-envelope"></i> - avramyu AT gmail
+									<i class="icon-envelope"></i> - avramyu AT gmail.com
 								  </p>
 							  </div><!-- col-xs-6 -->
 
 							  <div class="col-xs-6">
 								  <p class="sm">
-									<i class="icon-phone"></i> - +44 2009-4839 <br/>
-									<i class="icon-apple"></i> - 902 3940-4439
+									<i class="icon-phone"></i> - +381 64 19 44 811 <br/>
 								  </p>
 							  </div><!-- col-xs-6 -->
 						  </div><!-- row -->
