--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 						  <h4><i class="icon-file-text-alt"></i> Education</h4>
 						<p class="sm">
-							<grey>Bachelor appl. vocational engineer of electrical and computer engineering</grey> | ICT College<br/>
+							<grey>Vocational engineer of electrical and computer engineering (Bachelor appl.)</grey> | ICT College<br/>
 							<grey>Certified Android applications developer</grey> | IT Centar<br/>
 						</p>
 
@@ -112,14 +112,14 @@
 						  <div class="row">
 							  <div class="col-xs-6">
 								  <p class="sm">
-									<i class="icon-globe"></i> - <a href="http://avramovic.info" target="_blank">avramovic.info</a> <br/>
-									<i class="icon-envelope"></i> - avramyu AT gmail.com
+									<i class="icon-globe"></i> / <a href="http://avramovic.info" target="_blank">avramovic.info</a> <br/>
+									<i class="icon-envelope"></i> / avramyu AT gmail.com
 								  </p>
 							  </div><!-- col-xs-6 -->
 
 							  <div class="col-xs-6">
 								  <p class="sm">
-									<i class="icon-phone"></i> - +381 64 19 44 811 <br/>
+									<i class="icon-phone"></i> / +381 64 19 44 811 <br/>
 								  </p>
 							  </div><!-- col-xs-6 -->
 						  </div><!-- row -->
@@ -129,15 +129,15 @@
 						  <div class="row">
 							  <div class="col-xs-6">
 								  <p class="sm">
-									<i class="icon-facebook"></i> - <a href="https://fb.me/nemanja.avramovic" target="_blank">nemanja.avramovic</a> <br/>
-									<i class="icon-linkedin"></i> - <a href="https://www.linkedin.com/in/avramovic" target="_blank">avramovic</a>
+									<i class="icon-facebook"></i> / <a href="https://fb.me/nemanja.avramovic" target="_blank">nemanja.avramovic</a> <br/>
+									<i class="icon-linkedin"></i> / <a href="https://www.linkedin.com/in/avramovic" target="_blank">avramovic</a>
 								  </p>
 							  </div><!-- col-xs-6 -->
 
 							  <div class="col-xs-6">
 								  <p class="sm">
-									<i class="icon-github"></i> - <a href="https://github.com/avramovic" target="_blank">avramovic</a> <br/>
-									<i class="icon-twitter"></i> - <a href="https://twitter.com/avramator" target="_blank">avramator</a>
+									<i class="icon-github"></i> / <a href="https://github.com/avramovic" target="_blank">avramovic</a> <br/>
+									<i class="icon-twitter"></i> / <a href="https://twitter.com/avramator" target="_blank">avramator</a>
 								  </p>
 							  </div><!-- col-xs-6 -->
 						  </div><!-- row -->
