--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 						  <h4><i class="icon-trophy"></i> Awards</h4>
 						<p class="sm">
-							<grey>Tech innovation</grey> | B-Link festival<br/>
+							<grey>Tech innovation</grey> | B-Link festival, 2008.<br/>
 						</p>
 					  </div><!-- Tab Profile -->
 
@@ -113,13 +113,14 @@
 							  <div class="col-xs-6">
 								  <p class="sm">
 									<i class="icon-globe"></i> / <a href="http://avramovic.info" target="_blank">avramovic.info</a> <br/>
-									<i class="icon-envelope"></i> / avramyu AT gmail.com
+									<i class="icon-globe"></i> / <a href="http://webinsane.com" target="_blank">webinsane.com</a>
 								  </p>
 							  </div><!-- col-xs-6 -->
 
 							  <div class="col-xs-6">
 								  <p class="sm">
-									<i class="icon-phone"></i> / +381 64 19 44 811 <br/>
+									<i class="icon-envelope"></i> / avramyu AT gmail.com <br/>
+									<i class="icon-phone"></i> / +381 64 19 44 811
 								  </p>
 							  </div><!-- col-xs-6 -->
 						  </div><!-- row -->
