contact info email

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 							  <div class="col-xs-6">
 								  <p class="sm">
-									<i class="icon-envelope"></i> / avramyu AT gmail.com <br/>
+									<i class="icon-envelope"></i> / avramyu<span style="display:none"></span>@gmail.com <br/>
 									<i class="icon-phone"></i> / +381 64 19 44 811
 								  </p>
 							  </div><!-- col-xs-6 -->
