--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 					  <!-- ===== First Tab ===== -->
 					  <div class="tab-pane active" id="about">
 						<h3>Nemanja Avramović</h3>
-						<h5>PHP Developer</h5>
+						<h5>Software Developer</h5>
 						<hr>
-						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-						<p>Has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it.</p>
-						<p class="pull-right red"><i class="icon-heart"></i></p>
+						<p>Hello! I am Nemanja, software developer from Belgrade, Serbia.</p>
+						<p>I love writing clean and concise code. My first love is PHP but I've had some projects done in Java too. And C#. And Perl. And even LUA.</p>
+						<p class="pull-right red"><i title="Perform a KONAMI code here!" class="icon-heart"></i></p>
 					  </div><!-- tab about -->
 
 					  <!-- ===== Second Tab ===== -->
