--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Personal page">
+    <meta name="author" content="Nemanja Avramović">
+    <meta name="yandex-verification" content="14a3d835f5953995" />
     <link rel="shortcut icon" href="assets/img/favicon.png">
 
     <title>Nemanja Avramović</title>
