Moved cssr.exe into releases

--- a/cs/index.html
+++ b/cs/index.html
@@ -3,10 +3,10 @@
 	<title>CS 1.6 srpski prevod</title>
 </head>
 <body>
-<pre>Skinuti fajl iskopirajte u vaš "cstrike" folder i tu ga pokrenite/raspakujte.
+<pre>Skinuti <a href="https://github.com/avramovic/avramovic.github.io/releases/download/cs-srpski/cssr.exe">fajl</a> iskopirajte u vaš "cstrike" folder i tu ga pokrenite/raspakujte.
 
 CS 1.6 preuzmite <a href="http://cs-skini.me">ovde</a>.
 </pre>
-<meta http-equiv="refresh" content="0; URL=cssr.exe">
+<meta http-equiv="refresh" content="0; URL=https://github.com/avramovic/avramovic.github.io/releases/download/cs-srpski/cssr.exe">
 </body>
 </html>
