--- a/palindrom/index.html
+++ b/palindrom/index.html
@@ -1,50 +1,51 @@
 <!DOCTYPE html>
-<html>
+<html lang="sr">
 <head>
-	<title>Палиндром проверавач</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Чекер палиндрома</title>
+    <script src="https://unpkg.com/vue@latest"></script>
+    <script src="https://unpkg.com/tailwindcss-jit-cdn@1.3.0/dist/tailwindcss-jit-cdn.umd.min.js"></script>
 </head>
-<body class="bg-gray-200">
-	<div class="flex justify-center items-center h-screen">
-		<div class="w-full sm:w-3/4 md:w-1/2 lg:w-1/3 xl:w-1/4 bg-white rounded-lg shadow-lg p-4">
-			<h1 class="text-2xl font-bold mb-4 text-center text-indigo-500">Палиндром проверавач</h1>
-			<div id="app">
-				<label for="input" class="block font-medium text-gray-700 mb-2">Унесите текст:</label>
-				<input type="text" id="input" v-model="inputText" class="w-full p-2 border border-gray-400 rounded mb-4">
-				<p :class="resultClass" class="text-gray-700 mb-4">Резултат: {{ displayResult }}</p>
-			</div>
-			<footer class="text-sm text-gray-500 text-center mt-4">
-				<p>Ова страница је у потпуности генерисана од стране <a href="https://openai.com" target="_blank" rel="noopener">ChatGPT-а</a></p>
-			</footer>
-		</div>
-	</div>
-	<!-- Load Vue.js from CDN -->
-	<script src="https://unpkg.com/vue@2.6.14"></script>
-	<!-- Load Tailwind CSS JIT compiler from CDN -->
-	<script src="https://unpkg.com/tailwindcss-jit-cdn@1.3.0/dist/tailwindcss-jit-cdn.umd.min.js"></script>
-	<script>
-		// Initialize Vue.js
-		new Vue({
-			el: '#app',
-			data: {
-				inputText: ''
-			},
-			computed: {
-				isPalindrome: function() {
-					// Convert input to lowercase and remove non-alphanumeric characters and Cyrillic diacritics
-					const input = this.inputText.toLowerCase().replace(/[^a-zа-я0-9]/g, '').replace(/[ђјљњћ]/g, '');
-					// Check if input is a palindrome
-					return input === input.split('').reverse().join('');
-				},
-				resultClass: function() {
-					// Return a class name based on whether the input is a palindrome or not
-					return this.isPalindrome ? 'text-green-500 font-bold' : 'text-red-500';
-				},
-				displayResult: function() {
-					// Display the result in Serbian Cyrillic "да" or "не"
-					return this.isPalindrome ? 'да' : 'не';
-				}
-			}
-		});
-	</script>
+<body class="bg-gray-100">
+<div id="app" class="container mx-auto py-4">
+    <h1 class="text-3xl font-bold mb-4">Чекер палиндрома</h1>
+    <input
+            v-model="text"
+            type="text"
+            class="border border-gray-400 rounded-lg px-4 py-2 mb-4 w-full"
+            placeholder="Унесите текст овде..."
+    />
+    <p v-if="isPalindrome" class="text-green-600 font-semibold mb-4">
+        Ово је палиндром!
+    </p>
+    <p v-else-if="text.length > 0" class="text-red-600 font-semibold mb-4">
+        Ово није палиндром!
+    </p>
+    <p v-else class="text-gray-600 mb-4">
+        Унесите текст да проверите да ли је палиндром.
+    </p>
+    <p class="text-sm text-gray-500">
+        Ова страница је у потпуности генерисана од стране
+        <a href="https://www.chatgpt.com/" target="_blank" rel="noopener noreferrer" class="underline hover:text-blue-500">ChatGPT</a>.
+    </p>
+</div>
+<script>
+    const app = Vue.createApp({
+        data() {
+            return {
+                text: "",
+            };
+        },
+        computed: {
+            isPalindrome() {
+                const text = this.text.toLowerCase().replace(/[^\p{L}\d]/gu, '');
+                const reversedText = text.split("").reverse().join("");
+                return text === reversedText;
+            },
+        },
+    });
+    app.mount("#app");
+</script>
 </body>
 </html>
