--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 					  <div class="tab-pane" id="profile">
 					  	<h4><i class="icon-briefcase"></i> Job Experience</h4>
 					  	<p class="sm">
-							<grey><a href="https://www.tapmedical.ca" target="_blank">Tap medical</a></grey> | April 2020 - Actual<br/>
+							<grey><a href="https://menu.app" target="_blank">MENU Technologies</a></grey> | October 2022 - Actual<br/>
+							<grey><a href="https://www.tapmedical.ca" target="_blank">Tap medical</a></grey> | April 2020 - October 2022<br/>
 							<grey><a href="http://www.cloudhorizon.com" target="_blank">Cloud Horizon</a></grey> | October 2016 - April 2020<br/>
 							<grey><a href="http://www.cubescripts.com" target="_blank">CubeScripts Media</a></grey> | October 2011 - October 2016<br/>
 					  	</p>
