--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					  	
 						  <h4><i class="icon-trophy"></i> Awards</h4>
 					  	<p class="sm">
-					  		<grey>Best IT innovation</grey> | <a href="http://www.design4um.net/b-link-beograd.html" target="_blank">B-Link festival</a>, 2008<br/>
+					  		<grey>Best IT innovation</grey> | B-Link festival, 2008<br/>
                             (for <a href="https://packagist.org/packages/avram/vokativ" target="_blank">Vokativ</a> PHP library)
 					  	</p>
 					  </div><!-- Tab Profile -->
